[tool.poetry]
name = "oszsave"
version = "1.3.0"
description = "A powerful osu map downloader"
authors = ["bytewired9"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
colorama = "^0.4.6"
tqdm = "^4.65.2"
selenium = "^4.11.2"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
